Scrolling with Mac mouse don't cause rubber banding.

This cl marks GSB and GSE events that are generated from wheel events
with timer based phaseBegan and phaseEnded as synthetic.
This change is necessary to avoid rubber banding effect while scrolling
by a Mac mouse or any other device that don't provide wheel phase info.

Bug: 776962
Test: RenderWidgetHostViewMacWithWheelScrollLatchingEnabledTest.TimerBasedPhaseInfo
Change-Id: I51b318fd2790d39939d41dad2539c788bd6430eb
Reviewed-on: https://chromium-review.googlesource.com/779659
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518389}
Former-commit-id: 9984945dbe893379b16d01093c5cd30801ff782e